# performer

./: .gitignore  README.md  alembic.ini  pyproject.toml
migrations/: env.py
migrations/versions/: 30f55f51c71f_create_users_table.py  3480d5da8caf_migrations.py  4165e0f08e92_migrations.py  6cbef6d6b014_create_and_update_tables.py  82d414f189fc_create_users_table.py  8c4b104d86b5_migrations.py  9fe39a02ec5c_migrations.py  bf35d3ca6280_migrations.py  c856d23b0a84_migrations.py  cbb544c095e9_migrations.py  ea6a1cca94d0_migrations.py  f7c7f4e154be_migrations.py
performer/: app.py  database.py  models.py  settings.py
performer/docs/workout/: routers_equipment.toml  routers_exercises.toml  routers_workout.toml
performer/model/: models.py  nutrition_model.py  social_models.py  user_models.py  workout_models.py
performer/routers/v1/: hello.py  routers_users.py  routers_users_details.py
performer/routers/v1/nutrition/: routers_food_items.py  routers_user_meal_logs.py
performer/routers/v1/social/: routers_achievements.py  routers_social.py  routers_social_comments.py  routers_social_likes.py  routers_social_posts.py  routers_user_achievements.py
performer/routers/v1/users/: hello.py  routers_progress_tracking.py  routers_user_exercise_logs.py  routers_user_workout_schedules.py  routers_user_workout_sessions.py  routers_users.py  routers_users_details.py
performer/routers/v1/workout/: routers_cardio_exercises.py  routers_equipment.py  routers_exercises.py  routers_user_cardio_logs.py  routers_user_hiit_logs.py  routers_workout.py  routers_workout_exercises.py
performer/schemas/: schemas_users.py  schemas_users_details.py
performer/schemas/nutrition/: schemas_food_items.py  schemas_user_meal_logs.py
performer/schemas/social/: schemas_social_comments.py  schemas_social_likes.py  schemas_social_posts.py
performer/schemas/users/: schemas_user_workout_sessions.py  schemas_users.py  schemas_users_details.py
performer/schemas/workout/: schemas_cardio_exercises.py  schemas_equipment.py  schemas_exercises.py  schemas_user_cardio_logs.py  schemas_user_hiit_logs.py  schemas_workout.py  schemas_workout_exercises.py
performer/tools/: decoradores.py  tool_logs.py
tests/: conftest.py  test_app.py  test_db.py  test_routers_users.py  test_routers_users_details.py
tests/test_users/: test_routers_users.py
tests/test_users_details/: test_routers_users_details.py
